--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,17 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <scope>test</scope>
+            </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
 
     </dependencies>
 
