--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <version>2.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.wiremock</groupId>
+            <artifactId>wiremock</artifactId>
+            <version>3.4.2</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
